--- a/style.css
+++ b/style.css
@@ -9,3 +9,16 @@ body {
     font-family: 'Rubik', sans-serif;
 }
 
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+}
+
+button {
+    border: none;
+    background-color: transparent;
+}
+
