--- a/style.css
+++ b/style.css
@@ -22,3 +22,173 @@ button {
     background-color: transparent;
 }
 
+.header {
+    background-color: #0A61F7;
+    padding: 14px 0;
+}
+
+.menu-link {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.67;
+    letter-spacing: 0.12em;
+    text-transform: uppercase;
+    color: #fff;
+}
+
+.main-title {
+    font-weight: 500;
+    font-size: 58px;
+    line-height: 1.172;
+    color: #363940;
+    margin-bottom: 30px;
+}
+
+.text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.375;
+    color: #95a1bb;
+}
+
+.button {
+    border-radius: 4px;
+    width: 152px;
+    height: 50px;
+    background-color: #0a61f7;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.4;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: #fff;
+}
+
+.rates-section {
+    background-color: #f9fafc;
+    padding: 100px 0;
+}
+
+.rates-section .title {
+    margin-bottom: 20px;
+}
+
+.rates-section .text {
+    margin-bottom: 40px;
+}
+
+.title {
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 1.344;
+    color: #363940;
+}
+
+.table {
+    border-collapse: collapse;
+}
+
+th,td {
+    border: 1px solid #95a1bb;
+    width: 241px;
+    padding: 15px 0;
+    text-align: center;
+}
+
+.table-subtitle.gray {
+    color: #95a1bb;
+}
+
+.table-title {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    color: #363940;
+}
+
+.table-link {
+    color: #0a61f7;
+}
+
+.table-button {
+    border: 1px solid #0a61f7;
+    border-radius: 4px;
+    width: 140px;
+    padding: 8px 0;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.63;
+    letter-spacing: 0.12em;
+    text-transform: uppercase;
+    color: #0a61f7;
+}
+
+.table-button.active {
+    background-color: #0a61f7;
+    color: #fff;
+}
+
+.table-footer td {
+    padding: 30px 0;
+}
+
+.create-account-section {
+    padding: 100px 0;
+}
+
+.create-account-section .title {
+    margin-bottom: 50px;
+}
+
+.create-account-section .text {
+    margin-bottom: 40px;
+    max-width: 500px;
+}
+
+.list-item {
+    list-style-image: url(./assets/images/check.svg);
+    color: #363940;
+    }
+
+input, select, fieldset, textarea {
+    border-radius: 4px;
+    border: 1px solid #95a1bb;
+    padding: 14px 15px;
+}
+
+input, select, fieldset, textarea, label, legend, input::placeholder, select::placeholder, textarea::placeholder {
+    color: #95a1bb;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22.4px;
+    font-family: inherit;
+}
+
+input[type="email"], input[type="password"], input[type="date"], select {
+    width: 230px;
+    height: 50px;
+}
+
+fieldset {
+    width: 100%;
+    padding: 30px 15px;
+}
+
+textarea {
+    width: 100%;
+    min-height: 80px;
+    resize: none;
+}
+
+form .button {
+    width: 100%;
+}
+
+select {
+    background: url(./assets/images/arrow-down.svg) no-repeat right 15px top 50%;
+    appearance: none;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+    background: url(./assets/images/calendar.svg) no-repeat;
+}
